--- a/INTERFACES/ASSIGMENT 8/components/main/main_productos/main_productos.html
+++ b/INTERFACES/ASSIGMENT 8/components/main/main_productos/main_productos.html
@@ -1,13 +1,13 @@
 <main>
     <section class="containerGrid">
-        <button class="f1-2_c1-2">
+        <button class="f1-2_c1-2" type="button">
             Inicia tu aventura
         </button>
         <article class="f1_c3">
             <section></section>
         </article>
         <article class="f1_c4"></article>
-        <button class="f1_c5">
+        <button class="f1_c5" type="button">
             Conoce a los artistas
         </button>
         <article class="f2_c3-4"></article>
@@ -16,11 +16,11 @@
         <article class="f3-4_c4-5">
             <h2>Conoce los distintos servicios</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <botton id="botonInfo">Más información</button>
+            <botton id="botonInfo" type="button">Más información</button>
         </article>
         <article class="f5_c1"></article>
         <article class="f5_c2"></article>
-        <button class="f5_c3">
+        <button class="f5_c3" type="button">
             Disfruta tu experiencia
         </button>
         <article class="f5_c4"></article>
