--- a/INTERFACES/ASSIGMENT 8/components/nav/nav.html
+++ b/INTERFACES/ASSIGMENT 8/components/nav/nav.html
@@ -1,15 +1,15 @@
 <nav>
-    <a id="aHome" href="#">
-        <img id="logo" src="./assets/logo2.png" alt="Logo" />
+    <a id="aHome" href="/pages/home/index.html">
+        <img id="logo" src="../../assets/logo2.png" alt="Logo" />
     </a>
     <section class="sectionLista">
         <a id="aArtistas" href="#">Artistas</a>
-        <a id="aProducto" href="#">Productos</a>
+        <a id="aProducto" href="/pages/productos/index.html">Productos</a>
         <a id="aPrecios" href="#">Precios</a>
         <a id="aClientes" href="#">Clientes</a>
     </section>
     <section class="sectionLista">
-        <button id="botonRegistro">Registro</button>
-        <button id="botonInicio">Inicio</button>
+        <button id="botonRegistro" type="button">Registro</button>
+        <button id="botonInicio" type="button">Inicio</button>
     </section>
 </nav>
