castellano el server

--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Home/Privacy.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Usa esta página para detallar los detalles de privacidad de tu web.</p>
