--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Home/Index.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">¡Bienvenido!</h1>
+    <p>Aprende acerca de <a href="https://learn.microsoft.com/aspnet/core">construir Web apps con ASP.NET Core</a>.</p>
 </div>
