--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisAvisos/Edit.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisAvisos/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Aviso</h4>
 <hr />
@@ -57,6 +57,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
