--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Empleados/Details.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Empleados/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Empleado
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
 <h1>Detalles</h1>
