--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Localizaciones/Delete.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Localizaciones/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Localizacion
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar";
 }
 
 <h1>Borrado</h1>
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Borrar" class="btn btn-danger" /> |
         <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
