--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Localizaciones/Edit.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Localizaciones/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Localizacion
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Editar</h1>
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
