--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Avisos/Create.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Avisos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Aviso
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
 <h1>Crear</h1>
@@ -45,7 +45,7 @@
                 <select asp-for="EquipoId" class ="form-control" asp-items="ViewBag.EquipoId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
