--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisAvisos/Details.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisAvisos/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Aviso
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
