--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisAvisos/Edit.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisAvisos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Aviso
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -50,7 +50,7 @@
                 <span asp-validation-for="EquipoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
