--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisDatos/Create.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisDatos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Empleado
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -30,7 +30,7 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
