--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisDatos/Edit.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/MisDatos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.Empleado 
  
 @{ 
-    ViewData["Title"] = "Edit"; 
+    ViewData["Title"] = "Editar"; 
     Layout = "~/Views/Shared/_Layout.cshtml"; 
 } 
  
@@ -36,7 +36,7 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
