--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/TipoAverias/Create.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/TipoAverias/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Models.TipoAveria
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
 <h1>Crear</h1>
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
