--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Usuarios/Create.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Usuarios/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcSoporte.Areas.Identity.Pages.Account.RegisterModel.InputModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -19,13 +19,13 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"></label>
+                <label asp-for="Password">Contraseña</label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 @*<label asp-for="ConfirmPassword"></label> *@ 
-                <label>Confirma Password</label>
+                <label>Confirmar Contraseña</label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
