--- a/INTERFACES/ASSIGMENT 8/components/main/main_home/main_home.css
+++ b/INTERFACES/ASSIGMENT 8/components/main/main_home/main_home.css
@@ -16,7 +16,7 @@
     left: 0em;
     right: 0em;
     bottom: 0em;
-    background-image: url('../../../assets/background.jpg');
+    background-image: var(--background-main);
     background-size: cover;
     background-position: center;
     opacity: 0.5;
