--- a/INTERFACES/ASSIGMENT 8/components/nav/nav.html
+++ b/INTERFACES/ASSIGMENT 8/components/nav/nav.html
@@ -1,10 +1,10 @@
 <nav>
-    <a id="aHome" href="/pages/home/index.html">
+    <a id="aHome" href="/pages/home/home.html">
         <img id="logo" src="../../assets/logo2.png" alt="Logo" />
     </a>
     <section class="sectionLista">
         <a id="aArtistas" href="#">Artistas</a>
-        <a id="aProducto" href="/pages/productos/index.html">Productos</a>
+        <a id="aProducto" href="/pages/productos/productos.html">Productos</a>
         <a id="aPrecios" href="#">Precios</a>
         <a id="aClientes" href="#">Clientes</a>
     </section>
