--- a/INTERFACES/ASSIGMENT 8/components/main/main_productos/main_productos.css
+++ b/INTERFACES/ASSIGMENT 8/components/main/main_productos/main_productos.css
@@ -2,7 +2,6 @@ main {
     height: calc(100% - 5% - 20% - 20%); 
 }
 
-
 .containerGrid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -32,22 +31,23 @@ main {
 
         background-size: cover;
         background-position: center;
-    }
 
-    *:hover {
-        box-shadow: 0px 8px 20px var(--shadow-color);
-
-        transform: translate(0.65em) scale(1.05);
+        &:hover {
+            box-shadow: 0px 8px 20px var(--shadow-color);
+    
+            transform: translate(0.65em) scale(1.05);
+        }
     }
+    
+        button {
+            padding: 2em;
+            
+            cursor: pointer;
+            
+            font-size: 1em;
+            font-weight: bold;
+        }
 
-    button {
-        padding: 2em;
-        
-        cursor: pointer;
-        
-        font-size: 1em;
-        font-weight: bold;
-    }
 
     /* ----- ELEMENTOS DEL GRID -----*/
 
