--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/TipoAverias/Index.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/TipoAverias/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Tipos de Averías</h1>
 
 <p>
-    <a asp-action="Create">Crear Nueva</a>
+    <a asp-action="Create">Crear nuevo tipo avería</a>
 </p>
 <table class="table">
     <thead>
