--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Empleados/Index.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Empleados/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                Empleados
+            </th>
+            <th>
                 @* @Html.DisplayNameFor(model => model.Nombre) *@
             </th>
             <th>
