--- a/INTERFACES/ASSIGMENT 9/diseño_responsive.css
+++ b/INTERFACES/ASSIGMENT 9/diseño_responsive.css
@@ -72,7 +72,8 @@ body {
     box-shadow: var(--shadow-nav1);
 
     &:hover {
-        border-bottom: 0.5em solid var(--hover-border-nav1);
+        /* POR SI QUISIERAMOS BORDE AL MOVERLO */
+        /* border-bottom: 0.5em solid var(--hover-border-nav1); */
         box-shadow: var(--hover-shadow-nav1);
     }
 }
@@ -139,14 +140,15 @@ body {
     }
 
     #contenedor {
-        grid-template-rows: repeat(6, 1fr);
+        grid-template-rows: repeat(7, 1fr);
         grid-template-areas: 
+        "nav1 nav1 nav1 nav1"
         "nav1 nav1 nav1 nav1"
         "nav2 cuerpo1 cuerpo1 cuerpo1"
         "nav2 cuerpo1 cuerpo1 cuerpo1"
         "nav2 cuerpo1 cuerpo1 cuerpo1"
         "nav2 cuerpo1 cuerpo1 cuerpo1"
-        "banner banner banner banner";
+        "banner banner banner banner"
     }
 
     #cuerpo1 {
