--- a/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Empleados/Index.cshtml
+++ b/SERVER/UNIT 7/MvcSoporte/MvcSoporte/Views/Empleados/Index.cshtml
@@ -10,6 +10,24 @@
 <p>
     <a asp-action="Create">Crear nuevo empleado</a>
 </p>
+
+@* AGREGAR UN CUADRO DE BÚSQUEDA EN LA VISTA INDEX DE AVISOS *@ 
+<form asp-action="Index">
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col-md">
+                <label class="control-label">Email:</label>
+                <input type="text" name="strCadenaDeBusqueda"
+                       value="@ViewData["BusquedaActual"]" class="form-control" />
+            </div>
+            <div class="col-md align-self-end">
+                <input type="submit" value="Buscar" class="btn btn-default" /> |
+                <a asp-action="Index" class="btn btn-default">Lista completa</a>
+            </div>
+        </div>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -62,12 +80,14 @@
     var nextDisabled = !Model.HasNextPage ? "disabled" : ""; 
 } 
 
-<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" 
+<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-busquedaActual="@ViewData["BusquedaActual"]"
    class="btn btn-outline-secondary @prevDisabled"> 
     Anterior 
 </a> 
 
 <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" 
+   asp-route-busquedaActual="@ViewData["BusquedaActual"]"
    class="btn btn-outline-secondary @nextDisabled"> 
     Siguiente
 </a>
