--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Users/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Users/Index.cshtml
@@ -4,31 +4,37 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Users</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New User</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Name
+                @* @Html.DisplayNameFor(model => model.Name) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                Email
+                @* @Html.DisplayNameFor(model => model.Email) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Level)
+                Level
+                @* @Html.DisplayNameFor(model => model.Level) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ExpPoints)
+                Exp Points
+                @* @Html.DisplayNameFor(model => model.ExpPoints) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Coins)
+                Coins
+                @* @Html.DisplayNameFor(model => model.Coins) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RegistrationDate)
+                Register Date
+                @* @Html.DisplayNameFor(model => model.RegistrationDate) *@
             </th>
             <th></th>
         </tr>
@@ -63,3 +69,7 @@
 }
     </tbody>
 </table>
+
+@* Incluir el componente Pagination *@
+<Partial name="_Pagination" model="Model" />
+
