--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/ChallengeResolutions/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/ChallengeResolutions/Index.cshtml
@@ -64,5 +64,16 @@
     </tbody>
 </table>
 
-@* Incluir el componente Pagination *@
-<Partial name="_Pagination" model="Model" />
+@* Poner botones de página Siguiente y Anterior *@ 
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)"
+   class="btn btn-outline-secondary @prevDisabled">
+    Anterior
+</a>
+<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)"
+   class="btn btn-outline-secondary @nextDisabled">
+    Siguiente
+</a> 
