Cositas intento añadir imagenes

--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
@@ -36,9 +36,30 @@
                     <li class="nav-item">
                         <a class="nav-link fs-5" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-5" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
+                     <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="Image" asp-action="Index">Images</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="Challenge" asp-action="Index">Challenges</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="ChallengeResolution" asp-action="Index">Challenges Resolutions</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" asp-area="" asp-controller="OrderDetail" asp-action="Index">Orders Details</a>
+                    </li>
+                    @* <li class="nav-item"> *@
+                    @*     <a class="nav-link fs-5" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a> *@
+                    @* </li> *@
                 </ul>
             </div>
             
