--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Challenges/Create.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Challenges/Create.cshtml
@@ -61,6 +61,13 @@
                 <input asp-for="ProductLevel" class="form-control" />
                 <span asp-validation-for="ProductLevel" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label for="imageFiles">Images</label>
+                <input type="file" id="imageFiles" name="imageFiles" multiple class="form-control" />
+                <span asp-validation-for="Images" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
